--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
+.round-bottom {
+  border-bottom-left-radius: 50% 400px !important;
+  border-bottom-right-radius: 50% 400px !important;
+  position: absolute;
+  overflow: hidden;
+  width: 160%;
+  margin-bottom: -50px;
+  left: -30%;
+  background-color: orange;
+  background-size: 42% auto;
+  height: 500px;
+}
+.container1 {
+  width: 100%;
+  height: 600px;
+  padding-bottom: 50px;
+  overflow: hidden;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
