--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -1,22 +1,52 @@
-.round-bottom {
-    border-bottom-left-radius: 50% 400px !important;
-    border-bottom-right-radius: 50% 400px !important;
-    position: absolute;
-    overflow: hidden;
-    width: 160%;
-    margin-bottom: -50px;
-    left: -30%;
-    background-color: orange;
-    background-size: 42% auto;
-    height: 500px;
-  }
-  .container1 {
-    width: 100%;
-    height: 600px;
-    padding-bottom: 50px;
-    overflow: hidden;
-  }
-  
-  html,body{
-    overflow-x: hidden;
-  }
+/* .round-bottom {
+  border-bottom-left-radius: 50% 400px !important;
+  border-bottom-right-radius: 50% 400px !important;
+  position: absolute;
+  overflow: hidden;
+  width: 160%;
+  margin-bottom: -50px;
+  left: -30%;
+  background-color: orange;
+  background-size: 42% auto;
+  height: 500px;
+} */
+
+.shape {
+  position: relative;
+  overflow: hidden;
+  padding-top: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 50px;
+}
+
+.shape::before {
+  border-radius: 40%;
+  position: absolute;
+  background: orange;
+  right: -200px;
+  left: -200px;
+  top: -200px;
+  content: '';
+  bottom: 0;
+}
+
+.col-layout {
+  display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+  z-index: 99999;
+}
+
+.row-layout {
+  display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+  align-items: center;
+  z-index: 99999;
+}
+
+html,
+body {
+  overflow-x: hidden;
+}
